# img-to-drawing

./: .gitignore  README.md  pyproject.toml  test.py
